# cpp-test

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: Window.hpp
include/Core/: Window.h
src/: Window.cpp  main.cpp
src/Core/: Window.cpp
